<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
          AIzaSyCN7KJLmbnKhMBKk9Hqdi5tV4Hj2MoKIpw
    </string>
    <string name="app_id">br.edu.ufcg.embedded.motofest</string>
    <string name="app_name">MotoFest</string>
    <string name="app_full_name">MotoFest 2015</string>
    <string name="title_map">Map</string>
    <string name="title_activity_camera">Camera</string>
    <string name="no_camera">This device has no camera</string>
    <string name="camera_not_found">Camera not available</string>
    <string name="error_create_media">Error creating media file</string>
    <string name="img_saved">Image Saved on Gallery Successfully</string>
    <string name="carregando_localizacao">Loading Location</string>
    <string name="to_motofest">Motofest 2015</string>
    <string name="my_location">My Location</string>
    <string name="enable_gps">Enable either GPS or any other location service. Click OK to go to location services settings to let you do so</string>
    <string name="shout_route">Trace Route</string>
    <string name="bt_wifi">Wi-Fi</string>
    <string name="bt_mobile_network">Mobile Network</string>
    <string name="enable_network">Enable Internet Connection to use this feature. Click Wifi to open Wifi settings or Mobile Network service to enable your data network</string>
    <string name="bt_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pinpoint">Markers</string>
    <string name="programacao">Schedule</string>
    <string name="apoio">Sponsors</string>
    <string name="hoje">Today</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
<string name="share_app_text">Do you want to know everything about the Campina Grande Motofest? - I found an excellente app for Android:
Get the app for free at </string>
<string name="paragrafo">"    The Campina Grande Motofest had its beginning in 2006, with only small fairs was happening in Dam old. At the time, the founder Entrepreneur of the event, the motorcyclist Álvaro Lucena fought and with a lot of guts and determination, consolidated event in the city now in its second edition.
    Every year the entrepreneur climbed to transform the Campina Grande Motofest in a great event for the city, bringing motorcyclists tourists from around the world that drives the local economy creating jobs and formal and informal income.
    </string>
 <string name="paragrafo4">
            "Today Campina Grande Motofest is included in the calendar of events of Campina Grande and Paraíba, it became an official event of great importance for the city. The party has shops stand, food court, chemical toilets, stage for concerts , forró foot mountain, police and ambulance.
</string>
    <string name="frase">The Mega Northeast International Event</string>
    <string name="agora">As it is now:</string>
    <string name="comeco">How everything started:</string>
    <string name="partners">Partners</string>
    <string name="Motoclube">Motorcycle Clubs</string>
    <string name="Motoclube1">ROTA 230</string>
    <string name="Motoclube1_sub">FACÇÃO RJ,SP,PB</string>
    <string name="Motoclube2">MISSÕES SOBRE RODAS</string>
    <string name="Motoclube2_sub">Campina Grande - PB</string>
    <string name="Motoclube3">CÃES EM FÚRIA</string>
    <string name="Motoclube3_sub">Campina Grande - PB</string>
    <string name="Motoclube4">MISSIONÁRIOS ESTRADEIROS</string>
    <string name="Motoclube4_sub">Campina Grande - PB</string>
    <string name="Motoclube5">CÃES DE GUERRA</string>
    <string name="Motoclube5_sub">Campina Grande - PB</string>
    <string name="Motoclube6">FANTASMAS DO ASFALTO</string>
    <string name="Motoclube6_sub">Campina Grande - PB</string>
    <string name="Motoclube7">TARTARUGAS DO ASFALTO</string>
    <string name="Motoclube7_sub">Pocinhos - PB</string>
    <string name="Motoclube8">VINGADORES DO ASFALTO</string>
    <string name="Motoclube8_sub">Campina Grande - PB</string>
    <string name="Motoclube9">LUZ DE CRISTO</string>
    <string name="Motoclube9_sub">Campina Grande - PB</string>
    <string name="Motoclube10">LEGENDÁRIOS DO ASFALTO</string>
    <string name="Motoclube10_sub">Campina Grande - PB</string>
    <string name="Motoclube11">MC ESQUADRÃO DE CRISTO</string>
    <string name="Motoclube11_sub">Paraíba</string>
    <string name="Motoclube12">OLHOS DE ÁGUIA</string>
    <string name="Motoclube12_sub">Recife - PE</string>
    <string name="Motoclube13">PEGADAS NO ASFALTO</string>
    <string name="Motoclube13_sub">Souza - PB</string>
    <string name="Motoclube14">DRAGÕES TEMPLÁRIOS</string>
    <string name="Motoclube14_sub">Natal - RN</string>
    <string name="Motoclube15">PINTO PEQUENO</string>
    <string name="Motoclube15_sub">Monteiro - PB</string>
    <string name="Motoclube16">URUBU CANGUEIRO</string>
    <string name="Motoclube16_sub">Picui - PB</string>
    <string name="Motoclube17">TIGRES DO ASFALTO</string>
    <string name="Motoclube17_sub">João Pessoa - PB</string>
    <string name="Motoclube18">COMANDO GERAL</string>
    <string name="Motoclube18_sub">Campina Grande - PB</string>
    <string name="Motoclube19">OURIÇOS DO ASFALTO</string>
    <string name="Motoclube19_sub">Ipojuca - PB</string>
    <string name="Motoclube20">COMANDO GERAL DAS HAYABUSAS</string>
    <string name="Motoclube20_sub">Campina Grande - PB</string>
    <string name="Motoclube21">ARANHAS NEGRAS</string>
    <string name="Motoclube21_sub">João Pessoa - PB</string>
    <string name="Motoclube22">RENEGADOS 46</string>
    <string name="Motoclube22_sub">João Pessoa - PB</string>
    <string name="Motoclube23">ARCHANGELS OF PEACE</string>
    <string name="Motoclube23_sub">Campina Grande - PB</string>
    <string name="Motoclube24">KANSAS CLUBE LEÃO DO ASFALTO</string>
    <string name="Motoclube24_sub">João Pessoa - PB</string>
    <string name="Motoclube25">RATOS DO BREJO</string>
    <string name="Motoclube25_sub">Brejo do Cruz - PB</string>
    <string name="bt_markers">Markers</string>
    <string name="notification_title_1">There are only 30 days for Motofest Campina Grande, anxious?</string>
    <string name="notification_title_2">There are only 15 days for Motofest Campina Grande, anxious?</string>
    <string name="notification_title_3">There are only 7 days for Motofest Campina Grande, anxious?</string>
    <string name="about">About</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact us</string>
    <string name="action_feedback">Contact us</string>
    <string name="add_avaliation">Add your avaliation…</string>
    <string name="the_event">The Event</string>
    <string name="programacao_descricao">Check out the entire schedule of Motofest 2015.</string>
    <string name="youtube">Youtube</string>
    <string name="youtube_descricao">Click this icon to listen to the songs of the attractions that will perform at the event.</string>
    <string name="mapa_descricao">See event local\'s map and check the location of the booths, stages, health center and more</string>
    <string name="mark">Marker</string>
    <string name="marker_decricao">Learn how to find accommodation, booths, toilets, health center and more</string>
    <string name="camera_descricao">Get your friends to take photos and thematic selfies during Motofest 2015. You can save them on your device and share them on social networks.</string>
    <string name="main_camera_descricao">Use the your device main camera and continue taking custom photos</string>
    <string name="selfie_descricao">Take thematic selfies with your friends.</string>
    <string name="photo">Camera</string>
    <string name="main_camera">Main Camera</string>
    <string name="selfie">Selfie</string>
    <string name="download">Save Image</string>
    <string name="download_descricao">Save a photo on your device and view it whenever you want.</string>
    <string name="Prefeitura">Prefeitura de Campina Grande </string>
    <string name="SEDE">Secretaria de Desenvolvimento</string>
    <string name="remaining">REMAINING</string>
    <string name="to_event">for mega international event northeast</string>
    <string name="timeline_descricao">Chat in real time with participants Motofest 2015 and stay on top of news.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="continue_with_login">Enter without logging</string>
    <string name="hint_message">What do you want to share?</string>
    <string name="message_blank">Your message is blank</string>
    <string name="message_emoticon">Unfortunately we do not support emoticon</string>
    <string name="sending_message">Sending…</string>
    <string name="sending_avaliation_title">Please wait…</string>
    <string name="sending_avaliation">Sending avaliation…</string>
    <string name="item_menu">ITEM MENU</string>
    <string name="avaliation_text">The organization of the 2015 Motofest want to know your opinion about the event.</string>
    <string name="avaliation_send">evaluate successfully sent</string>
    <string name="version">Version 1.0.2</string>
    <string name="copyright">2015 Copyright©\nEmbedded Systems and Pervasive Computing Lab - UFCG -Brazil</string>
    <string name="logon_needed">To have access to the timeline you must be logged</string>
    <string name="timeline">Timeline</string>
    <string name="days">D</string>
    <string name="hours">H</string>
    <string name="minutes">M</string>
    <string name="seconds">S</string>
    <string name="desenvolvedores">Developers:\nBruno Rocha, Caio Vidal,\nLucas Matos, Pedro Henriques</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="designers">Designers: \nAlex Galvão, Aristóteles Júnior, Felipe Malhaeiros, Isadora Vasconcelos</string>
    <string name="modificacoes">Reports in timeline</string>
    <string name="notificao">Silent notification</string>
    <string name="tela">Home screen</string>
    <string name="Exibir">Show splash screen when the application starts</string>
    <string name="reproduzir">Play sounds when starting</string>
    <string name="message_error">Tap to try again</string>
    <string name="action_logout">Logout</string>
    <string name="tema">Motofest 2015</string>
    <string name="tempo">00D 00H 00M 00S</string>
    <string name="flash">Flash</string>
    <string name="flash_descricao">Enables or disables the flash for better picture quality</string>
    <string name="texto2">Rating required</string>
    <string name="seconds_ago">Seconds ago</string>
    <string name="a">A </string>
    <string name="minute"> minute</string>
    <string name="hour"> hour</string>
    <string name="yesterday_at">Yesterday at </string>
    <string name="at"> at </string>
    <string name="new_publication">New Publication</string>
    <string name="edit_publication">Edit Publication</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="txt_theme">Theme</string>
    <string name="select_theme">Activate new theme</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="action_login">Login</string>
    <string name="SEDE1">Econômico</string>
    <string name="no_app_to_share">To share, you need to have installed Facebook, Instagram, Whatsapp or Twitter application.</string>
    <string name="choose_app">"Choose app to share"</string>
</resources>