<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_motofest">

    <LinearLayout
        android:id="@+id/layoutEvaluate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/toolbar"
        android:gravity="top|center"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/txts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/avaliation_text" />

        <EditText
            android:id="@+id/avaliation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/add_avaliation"
            android:lines="5"
            android:padding="10dp"
            android:textColor="@color/preto" />

        <Button
            android:id="@+id/avaliation_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/avaliation_text"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/ok"
            android:textColor="@color/preto" />

        <TextView
            android:id="@+id/txtSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/avaliation_text"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/avaliation_send"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/logon_needed"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/branco" />

        <LinearLayout
            android:id="@+id/layoutGooglePlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/continue_app"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btSignInDefault"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
