<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_motofest"
    tools:context="br.edu.ufcg.embedded.motofest.activity.SettingsActivity">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:minHeight="?attr/actionBarSize"
        android:title="@string/app_name"
        android:layout_weight="1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/toolbar"
        android:id="@+id/scrollView4"
        android:layout_marginRight="16dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:gravity="top"
        android:weightSum="100"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTimelineCategory"
                android:textColor="@color/vermelho"
                android:text = "@string/timeline"
                android:textSize="20dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vermelho"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchTimeline"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTimeline"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/switchTimeline"
                android:paddingRight="10dp"
                android:textSize="15dp"
                android:textColor="@color/branco"
                android:text="@string/modificacoes"
            />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchTimelineSilenciosa"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTimelineSilenciosa"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/switchTimelineSilenciosa"
                android:paddingRight="10dp"
                android:textSize="15dp"
                android:textColor="@color/branco"
                android:text="@string/notificao" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSplashCategory"
                android:textColor="@color/vermelho"
                android:text="@string/tela"
                android:textSize="20dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vermelho"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchSplashLauncher"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSplashLauncher"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/switchSplashLauncher"
                android:paddingRight="10dp"
                android:textSize="15dp"
                android:textColor="@color/branco"
                android:text="@string/Exibir"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchSplashSound"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSplashSound"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/switchSplashSound"
                android:paddingRight="10dp"
                android:textSize="15dp"
                android:textColor="@color/branco"
                android:text="@string/reproduzir"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTheme"
                android:textColor="@color/vermelho"
                android:text="@string/txt_theme"
                android:textSize="20dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vermelho"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchTheme"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/txtSpinnerTheme"
                android:layout_toLeftOf="@+id/switchTheme"
                android:paddingRight="10dp"
                android:textSize="15dp"
                android:textColor="@color/branco"
                android:text="@string/select_theme"/>

        </RelativeLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
