<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_above="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:id="@+id/checkBoxesLayout">

            <CheckBox
                android:id="@+id/checkBoxMarkers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:checked="false"
                android:text="@string/bt_markers"
                android:visibility="gone"
                android:layout_marginTop="25dp" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.81"
        android:divider="@color/vermelho"
        android:dividerPadding="2dp">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/bt_cancel"
            android:textColor="@color/vermelho"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/ok"
            android:textColor="@color/vermelho"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>