<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_motofest">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center"
            android:weightSum="100"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/logo_screen_sobre"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/background"
                android:text="@string/app_full_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/version"
                android:layout_marginBottom="20dp"
                android:layout_weight="9.47" />



            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/copyright"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/designers"
                android:layout_weight="1.14"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/desenvolvedores"
                android:id="@+id/text3"
                android:layout_marginBottom="0dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_weight="18.29">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/imageView"
                    android:background="@drawable/logo_desk"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/imageView8"
                    android:background="@drawable/logo_embedded"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
